# backend-registration-prototype

./: .gitignore  CMakeLists.txt  README.md
src/: config.cpp  config.hpp  http_handler.cpp  http_handler.hpp  http_server.cpp  http_server.hpp  json_parser.cpp  json_parser.hpp  logger.cpp  logger.hpp  main.cpp  password_hasher.cpp  password_hasher.hpp  registration_logic.cpp  registration_logic.hpp  registration_service.cpp  registration_service.hpp  user_repository.cpp  user_repository.hpp  uuid_generator.cpp  uuid_generator.hpp
task/src/: registration_logic.hpp
task/tests/: test_validation.cpp
tests/: test_validation.cpp
